解决ID失真
